[package]
name = "kvs"
version = "0.1.0"
authors = ["Marko Puromäki <mpuromaki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.2"

[lib]
test = false
doctest = false

[[bin]]
name="kvs"
test = false
doctest = false